--- a/Index.html
+++ b/Index.html
@@ -37,14 +37,14 @@
         <div class="row">
             <!--Navigation-->
             <div class="col-12 col-md-3 p-5 bg-secondary  ">
-                <a href="../Pages/index.html">
+                <a href="../index.html">
                     <img src="../Pictures/NytMig.jpg" class="btn rounded-circle mx-auto d-block" alt="Mig"
                         width="140" height="200">
                     </a>
                 <ul class="nav nav-pills flex-column">
                     <li class="nav-item btn btn-dark btn-block mt-2">
                         <div class="d-grid">
-                            <a role="button" class="btn btn-dark btn-block" href="../Pages/index.html">
+                            <a role="button" class="btn btn-dark btn-block" href="../index.html">
                                 Home
                             </a>
                         </div>
