--- a/Pages/Gallerier.html
+++ b/Pages/Gallerier.html
@@ -29,14 +29,14 @@
         <div class="row row-cols-3">
             <!--Navigation-->
             <div class="col-12 col-md-3 p-2 bg-secondary  ">
-                <a href="../ProgStud/index.html">
-                    <img src="../ProgStud/Pictures/NytMig.jpg" class="btn rounded-circle mx-auto d-block" alt="Mig"
+                <a href="../index.html">
+                    <img src="../Pictures/NytMig.jpg" class="btn rounded-circle mx-auto d-block" alt="Mig"
                         width="200" height="260">
                     </a>
                 <ul class="nav nav-pills flex-column">
                     <li class="nav-item btn btn-dark btn-block mt-2">
                         <div class="d-grid">
-                            <a role="button" class="btn btn-dark btn-block" href="../ProgStud/index.html">
+                            <a role="button" class="btn btn-dark btn-block" href="../index.html">
                                 Home
                             </a>
                         </div>
@@ -45,16 +45,16 @@
                     <li class="nav-item dropdown btn btn-dark mt-2">
                         <a class="nav-link text-white dropdown-toggle" data-bs-toggle="dropdown" href="#">Portfolio</a>
                         <ul type="button" class="dropdown-menu">
-                            <li><a class="dropdown-item text-center" href="../ProgStud/Pages/Gallerier.html">Gallerier</a></li>
-                            <li><a class="dropdown-item text-center" href="../ProgStud/Pages/ASCII ART.html">ASCII Art</a></li>
-                            <li><a class="dropdown-item text-center" href="../ProgStud/Pages/Planter.html">Planter</a></li>
+                            <li><a class="dropdown-item text-center" href="../Pages/Gallerier.html">Gallerier</a></li>
+                            <li><a class="dropdown-item text-center" href="../Pages/ASCII ART.html">ASCII Art</a></li>
+                            <li><a class="dropdown-item text-center" href="../Pages/Planter.html">Planter</a></li>
 
                         </ul>
                     </li>
                     <hr class="mt-4">
                     <li class="nav-item btn btn-dark btn-block mt-2">
                         <div class="d-grid">
-                            <a role="button" class="btn btn-dark btn-block" href="../ProgStud/Pages/Kontakt.html">
+                            <a role="button" class="btn btn-dark btn-block" href="../Pages/Kontakt.html">
                                 Kontakt
                             </a>
                         </div>
@@ -94,7 +94,7 @@
             <div class="col-12 col-lg-5 pt-4 bg-dark ">
                 <h3 class="text-center">
                     <button type="button" class="btn btn-primary btn-lg"
-                        onclick="location.href = '../ProgStud/Pages/ASCII ART.html';">ASCII ART</button>
+                        onclick="location.href = '../Pages/ASCII ART.html';">ASCII ART</button>
                 </h3>
                 <div class="col bg-dark">
                     <div class="row row-cols-6 g-1">
