--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
         <div class="row">
             <!--Navigation-->
             <div class="col-12 col-md-3 p-2 bg-secondary">
-                <a href="../ProgStud/index.html">
-                    <img src="../ProgStud/Pictures/NytMig.jpg" class="btn rounded-circle mx-auto d-block" alt="Mig"
+                <a href="../index.html">
+                    <img src="../Pictures/NytMig.jpg" class="btn rounded-circle mx-auto d-block" alt="Mig"
                         width="200" height="260">
                     </a>
                 <ul class="nav nav-pills flex-column">
