--- a/Pages/ASCII ART.html
+++ b/Pages/ASCII ART.html
@@ -30,9 +30,9 @@
             <!--Navigation-->
             <div class="col-12 col-md-3 p-2 bg-secondary  ">
                 <a href="../index.html">
-                    <img src="../Pictures/NytMig.jpg" class="btn rounded-circle mx-auto d-block" alt="Mig"
-                        width="200" height="260">
-                    </a>
+                    <img src="../Pictures/NytMig.jpg" class="btn rounded-circle mx-auto d-block" alt="Mig" width="200"
+                        height="260">
+                </a>
                 <ul class="nav nav-pills flex-column">
                     <li class="nav-item btn btn-dark btn-block mt-2">
                         <div class="d-grid">
@@ -66,51 +66,133 @@
             <!--Pictures of Ascii-->
             <div class="col bg-dark">
                 <div class="row row-cols-6">
-                    <img src="../Pictures/ASCII ART/LeftsideBKLS.png " class="img-thumbnail img-fluid"
-                        alt="Bricks with \" width="50" height="50">
-                    <img src="../Pictures/ASCII ART/RightsideBKLS.png" class="img-thumbnail img-fluid"
-                        alt="Bricks with /" width="50" height="50">
-                    <img src="../Pictures/ASCII ART/BricksStraight.png" class="img-thumbnail img-fluid"
-                        alt="Bricks with |" width="50" height="50">
-                    <img src="../Pictures/ASCII ART/WallTippingRight.png" class="img-thumbnail img-fluid"
-                        alt="Wall tipping right" width="50" height="50">
-                    <img src="../Pictures/ASCII ART/WallTippingLeft.png" class="img-thumbnail img-fluid"
-                        alt="Wall tipping Left" width="50" height="50">
-                    <img src="../Pictures/ASCII ART/Wall.png" class="img-thumbnail img-fluid" alt="Wall" width="50"
-                        height="50">
-                    <img src="../Pictures/ASCII ART/LongRoad.png" class="img-thumbnail img-fluid" alt="Long road"
-                        width="50" height="50">
-                    <img src="../Pictures/ASCII ART/Pyramid.png" class="img-thumbnail img-fluid" alt="Pyramid"
-                        width="50" height="50">
-                    <img src="../Pictures/ASCII ART/Pyramid2.png" class="img-thumbnail img-fluid" alt="Pyramid nr 2"
-                        width="50" height="50">
-                    <img src="../Pictures/ASCII ART/Tempel.png" class="img-thumbnail img-fluid" alt="Tempel" width="50"
-                        height="50">
-                    <img src="../Pictures/ASCII ART/CrossRoadDungeon.png" class="img-thumbnail img-fluid"
-                        alt="Dungeon Crossroad" width="50" height="50">
-                    <img src="../Pictures/ASCII ART/DoorExitDungeon.png" class="img-thumbnail img-fluid"
-                        alt="Dungeon Exit" width="50" height="50">
-                    <img src="../Pictures/ASCII ART/DoorUnknownDungeon.png" class="img-thumbnail img-fluid"
-                        alt="Whats behind that door?" width="50" height="50">
-                    <img src="../Pictures/ASCII ART/SunnyCow.png" class="img-thumbnail img-fluid" alt="Cow in the sun"
-                        width="50" height="50">
-                    <img src="../Pictures/ASCII ART/FireElement.png" class="img-thumbnail img-fluid"
-                        alt="Fire elemenatal" width="50" height="50">
-                    <img src="../Pictures/ASCII ART/GoatieMan.png" class="img-thumbnail img-fluid"
-                        alt="Man With a goatie" width="50" height="50">
-                    <img src="../Pictures/ASCII ART/WallOfTheGiant.png" class="img-thumbnail img-fluid"
-                        alt="Wall of the giant" width="50" height="50">
-                    <img src="../Pictures/ASCII ART/Cup-Entrance.png" class="img-thumbnail img-fluid"
-                        alt="Cup or a entrance" width="50" height="50">
-                    <img src="../Pictures/ASCII ART/WallPainting.png" class="img-thumbnail img-fluid"
-                        alt="Old painting on the wall" width="50" height="50">
-                    <img src="../Pictures/ASCII ART/RiverArea.png" class="img-thumbnail img-fluid"
-                        alt="Finally we found water" width="50" height="50">
-                    <img src="../Pictures/ASCII ART/Sun.png" class="img-thumbnail img-fluid"
-                        alt="Dont look at it too much" width="50" height="50">
+                    <div class="card">
+                        <img src="../Pictures/ASCII ART/RightsideBKLS.png" class=" img-fluid" alt="Bricks with /">
+                        <h5 class="card-title">Wall</h5>
+                        <p class="card-text lh-sm">Wall made with right sided slashes</p>
+                    </div>
+                    <div class="card">
+                        <img src="../Pictures/ASCII ART/LeftsideBKLS.png " class="card-img img-fluid"
+                            alt="Bricks with \">
+                        <h5 class="card-title">Wall</h5>
+                        <p class="card-text lh-sm">Wall made with left sided slashes</p>
+                    </div>
+                    <div class="card">
+                        <img src="../Pictures/ASCII ART/WallTippingRight.png" class=" img-fluid"
+                            alt="Wall tipping right">
+                        <h5 class="card-title ">Wall</h5>
+                        <p class="card-text lh-sm">Wall looks like its tipping right</p>
+                    </div>
+                    <div class="card">
+                        <img src="../Pictures/ASCII ART/WallTippingLeft.png" class=" img-fluid" alt="Wall tipping Left">
+                        <h5 class="card-title ">Wall</h5>
+                        <p class="card-text lh-sm">Wall looks like its tipping left</p>
+                    </div>
+                    <div class="card">
+                        <img src="../Pictures/ASCII ART/CrossRoadDungeon.png" class=" img-fluid"
+                            alt="Dungeon Crossroad">
+                        <h5 class="card-title">Crossroad</h5>
+                        <p class="card-text lh-sm">Dungeon with a Crossroad</p>
+
+                    </div>
+                    <div class="card">
+                        <img src="../Pictures/ASCII ART/DoorExitDungeon.png" class=" img-fluid" alt="Dungeon Exit">
+                        <h5 class="card-title">Door</h5>
+                        <p class="card-text lh-sm">A door for exit</p>
+
+                    </div>
+                    <div class="card">
+                        <img src="../Pictures/ASCII ART/DoorUnknownDungeon.png" class=" img-fluid"
+                            alt="Whats behind that door?">
+                        <h5 class="card-title">Door</h5>
+                        <p class="card-text lh-sm">An unknown door, whats on the other side?</p>
+
+                    </div>
+                    <div class="card">
+                        <img src="../Pictures/ASCII ART/BricksStraight.png" class=" img-fluid" alt="Bricks with |">
+                        <h5 class="card-title">Bricks</h5>
+                        <p class="card-text lh-sm">Straight brick wall</p>
+
+                    </div>
+                    <div class="card">
+                        <img src="../Pictures/ASCII ART/Wall.png" class=" img-fluid" alt="Wall">
+                        <h5 class="card-title ">Wall</h5>
+                        <p class="card-text lh-sm">Just a plain wall</p>
+                    </div>
+                    <div class="card">
+                        <img src="../Pictures/ASCII ART/SunnyCow.png" class=" img-fluid" alt="Cow in the sun">
+                        <h5 class="card-title">Cow</h5>
+                        <p class="card-text lh-sm">A cow standing in a sunny field</p>
+
+                    </div>
+                    <div class="card">
+                        <img src="../Pictures/ASCII ART/FireElement.png" class=" img-fluid" alt="Fire elemenatal">
+                        <h5 class="card-title">Monster</h5>
+                        <p class="card-text lh-sm">Fire elemenatal</p>
+
+                    </div>
+                    <div class="card">
+                        <img src="../Pictures/ASCII ART/GoatieMan.png" class=" img-fluid" alt="Man With a goatie">
+                        <h5 class="card-title">Man</h5>
+                        <p class="card-text lh-sm">a man with a goatie</p>
+
+                    </div>
+                    <div class="card">
+                        <img src="../Pictures/ASCII ART/WallOfTheGiant.png" class=" img-fluid" alt="Wall of the giant">
+                        <h5 class="card-title">Giant</h5>
+                        <p class="card-text lh-sm">The wall of the giant</p>
+
+                    </div>
+                    <div class="card">
+                        <img src="../Pictures/ASCII ART/WallPainting.png" class=" img-fluid"
+                            alt="Old painting on the wall">
+                        <h5 class="card-title">Wall Painting</h5>
+                        <p class="card-text lh-sm">Who have made this, and when did they make it?</p>
+
+                    </div>
+                    <div class="card">
+                        <img src="../Pictures/ASCII ART/RiverArea.png" class="img-fluid" alt="Finally we found water">
+                        <h5 class="card-title">River Area</h5>
+                        <p class="card-text lh-sm">Nothing like the beautiful nature</p>
+
+                    </div>
+                    <div class="card">
+                        <img src="../Pictures/ASCII ART/Sun.png" class="img-fluid" alt="Dont look at it too much">
+                        <h5 class="card-title">Sun</h5>
+                        <p class="card-text lh-sm">Don`t look directly in it</p>
+
+                    </div>
+                    <div class="card">
+                        <img src="../Pictures/ASCII ART/Pyramid2.png" class=" img-fluid" alt="Pyramid nr 2">
+                        <h5 class="card-title">Pyramid</h5>
+                        <p class="card-text lh-sm">One of the many wonders of mankind</p>
+
+                    </div>
+                    <div class="card">
+                        <img src="../Pictures/ASCII ART/Tempel.png" class=" img-fluid" alt="Tempel">
+                        <h5 class="card-title">Tempel</h5>
+                        <p class="card-text lh-sm">Which kind of people made this?</p>
+
+                    </div>
+                    <div class="card">
+                        <img src="../Pictures/ASCII ART/LongRoad.png" class=" img-fluid" alt="Long road">
+                        <h5 class="card-title">Long Road</h5>
+                        <p class="card-text lh-sm">The long and lonely road</p>
+                    </div>
+                    <div class="card">
+                        <img src="../Pictures/ASCII ART/Pyramid.png" class=" img-fluid" alt="Pyramid">
+                        <h5 class="card-title">Pyramid</h5>
+                        <p class="card-text lh-sm">Is it inca or egyptian?</p>
+
+                    </div>
+                    <div class="card">
+                        <img src="../Pictures/ASCII ART/Cup-Entrance.png" class=" img-fluid" alt="Cup or a entrance">
+                        <h5 class="card-title">Cup/Entrance</h5>
+                        <p class="card-text lh-sm">Is it a cup or is it an entrance, maybe it is both?</p>
+
+                    </div>
                 </div>
             </div>
-
         </div>
 
 
