--- a/Pages/Planter.html
+++ b/Pages/Planter.html
@@ -30,9 +30,9 @@
             <!--Navigation-->
             <div class="col-12 col-md-3 p-2 bg-secondary  ">
                 <a href="../index.html">
-                    <img src="../Pictures/NytMig.jpg" class="btn rounded-circle mx-auto d-block" alt="Mig"
-                        width="200" height="260">
-                    </a>
+                    <img src="../Pictures/NytMig.jpg" class="btn rounded-circle mx-auto d-block" alt="Mig" width="200"
+                        height="260">
+                </a>
                 <ul class="nav nav-pills flex-column">
                     <li class="nav-item btn btn-dark btn-block mt-2">
                         <div class="d-grid">
@@ -48,7 +48,6 @@
                             <li><a class="dropdown-item text-center" href="../Pages/Gallerier.html">Gallerier</a></li>
                             <li><a class="dropdown-item text-center" href="../Pages/ASCII ART.html">ASCII Art</a></li>
                             <li><a class="dropdown-item text-center" href="../Pages/Planter.html">Planter</a></li>
-
                         </ul>
                     </li>
                     <hr class="mt-4">
@@ -64,25 +63,44 @@
             </div>
             <!--Pictures of plants-->
             <div class="col bg-dark">
-                <div class="row row-cols-2">
-                    <div class="col">
-                        <h4 class="text-info text-center">Oregano</h4>
-                        <img src="../Pictures/Planter/Oregano.jpg " class="img-thumbnail img-fluid"
-                            alt="Oregano skulle gerne være græsk" width="100" height="100">
-                        <img src="../Pictures/Planter/Oregano2.jpg " class="img-thumbnail img-fluid" alt="Vokset lidt"
-                            width="100" height="100">
-                        <img src="../Pictures/Planter/Oregano3.jpg " class="img-thumbnail img-fluid" alt="Vokset lidt"
-                            width="100" height="100">
+                <div class="row row-cols-3">
+                    <div class="card">
+                        <img src="../Pictures/Planter/Oregano.jpg " class=" img-fluid"
+                            alt="Oregano græsk">
+                        <h5 class="card-title">Oregano</h5>
+                        <p class="card-text lh-sm">21. april 2022</p>
+                        <p>Græsk oregano</p>
                     </div>
-                    <div class="col">
-                        <h4 class="text-info text-center">Basilikum</h4>
-                        <img src="../Pictures/Planter/Basilikum.jpg" class="img-thumbnail img-fluid" alt="Hvidløg"
-                            width="100" height="100">
-                        <img src="../Pictures/Planter/Basilikum2.jpg" class="img-thumbnail img-fluid" alt="Vokset lidt"
-                            width="100" height="100">
-                        <img src="../Pictures/Planter/Basilikum3.jpg" class="img-thumbnail img-fluid" alt="Vokset lidt"
-                            width="100" height="100">
+                    <div class="card">
+                        <img src="../Pictures/Planter/Oregano2.jpg " class=" img-fluid" alt="Vokset lidt">
+                        <h5 class="card-title">Oregano</h5>
+                        <p class="card-text lh-sm">17. maj 2022</p>
+                        <p>Græsk oregano</p>
                     </div>
+                    <div class="card">
+                        <img src="../Pictures/Planter/Oregano3.jpg " class=" img-fluid" alt="Vokset lidt">
+                        <h5 class="card-title">Oregano</h5>
+                        <p class="card-text lh-sm">16. juni 2022</p>
+                        <p>Græsk oregano</p>
+                    </div>
+                    <div class="card">
+                        <img src="../Pictures/Planter/Basilikum.jpg" class=" img-fluid" alt="Hvidløg">
+                        <h5 class="card-title">Oregano</h5>
+                        <p class="card-text lh-sm">21. april 2022</p>
+                    </div>
+                    <div class="card">
+                        <img src="../Pictures/Planter/Basilikum2.jpg" class=" img-fluid" alt="Vokset lidt">
+                        <h5 class="card-title">Oregano</h5>
+                        <p class="card-text lh-sm">17. maj 2022</p>
+                    </div>
+                    <div class="card">
+                        <img src="../Pictures/Planter/Basilikum3.jpg" class=" img-fluid" alt="Vokset lidt">
+                        <h5 class="card-title">Oregano</h5>
+                        <p class="card-text lh-sm">16. juni 2022</p>
+                    </div>
+
+
+
                 </div>
             </div>
         </div>
