--- a/index.html
+++ b/index.html
@@ -22,17 +22,8 @@
     <div class="container-fluid p-4 bg-dark text-center">
         <h6 class="display-6"></h6>
     </div>
-
-
-
-
-
-
-
-
-
+    
     <!--Container with navigation and information-->
-
     <div class="container-fluid">
         <div class="row">
             <!--Navigation-->
@@ -44,7 +35,7 @@
                 <ul class="nav nav-pills flex-column">
                     <li class="nav-item btn btn-dark btn-block mt-2">
                         <div class="d-grid">
-                            <a role="button" class="btn btn-dark btn-block" href="../ProgStud/index.html">
+                            <a role="button" class="btn btn-dark btn-block" href="../index.html">
                                 Home
                             </a>
                         </div>
@@ -53,16 +44,16 @@
                     <li class="nav-item dropdown btn btn-dark mt-2">
                         <a class="nav-link text-white dropdown-toggle" data-bs-toggle="dropdown" href="#">Portfolio</a>
                         <ul type="button" class="dropdown-menu">
-                            <li><a class="dropdown-item text-center" href="../ProgStud/Pages/Gallerier.html">Gallerier</a></li>
-                            <li><a class="dropdown-item text-center" href="../ProgStud/Pages/ASCII ART.html">ASCII Art</a></li>
-                            <li><a class="dropdown-item text-center" href="../ProgStud/Pages/Planter.html">Planter</a></li>
+                            <li><a class="dropdown-item text-center" href="../Pages/Gallerier.html">Gallerier</a></li>
+                            <li><a class="dropdown-item text-center" href="../Pages/ASCII ART.html">ASCII Art</a></li>
+                            <li><a class="dropdown-item text-center" href="../Pages/Planter.html">Planter</a></li>
 
                         </ul>
                     </li>
                     <hr class="mt-4">
                     <li class="nav-item btn btn-dark btn-block mt-2">
                         <div class="d-grid">
-                            <a role="button" class="btn btn-dark btn-block" href="../ProgStud/Pages/Kontakt.html">
+                            <a role="button" class="btn btn-dark btn-block" href="../Pages/Kontakt.html">
                                 Kontakt
                             </a>
                         </div>
