--- a/index.html
+++ b/index.html
@@ -28,14 +28,14 @@
         <div class="row">
             <!--Navigation-->
             <div class="col-12 col-md-3 p-2 bg-secondary">
-                <a href="../ProgStud/index.html">
-                    <img src="../ProgStud/Pictures/NytMig.jpg" class="btn rounded-circle mx-auto d-block" alt="Mig"
+                <a href="/ProgStud/index.html">
+                    <img src="/ProgStud/Pictures/NytMig.jpg" class="btn rounded-circle mx-auto d-block" alt="Mig"
                         width="200" height="260">
                     </a>
                 <ul class="nav nav-pills flex-column">
                     <li class="nav-item btn btn-dark btn-block mt-2">
                         <div class="d-grid">
-                            <a role="button" class="btn btn-dark btn-block" href="../ProgStud/index.html">
+                            <a role="button" class="btn btn-dark btn-block" href="/ProgStud/index.html">
                                 Home
                             </a>
                         </div>
@@ -44,16 +44,16 @@
                     <li class="nav-item dropdown btn btn-dark mt-2">
                         <a class="nav-link text-white dropdown-toggle" data-bs-toggle="dropdown" href="#">Portfolio</a>
                         <ul type="button" class="dropdown-menu">
-                            <li><a class="dropdown-item text-center" href="../ProgStud/Pages/Gallerier.html">Gallerier</a></li>
-                            <li><a class="dropdown-item text-center" href="../ProgStud/Pages/ASCII ART.html">ASCII Art</a></li>
-                            <li><a class="dropdown-item text-center" href="../ProgStud/Pages/Planter.html">Planter</a></li>
+                            <li><a class="dropdown-item text-center" href="/ProgStud/Pages/Gallerier.html">Gallerier</a></li>
+                            <li><a class="dropdown-item text-center" href="/ProgStud/Pages/ASCII ART.html">ASCII Art</a></li>
+                            <li><a class="dropdown-item text-center" href="/ProgStud/Pages/Planter.html">Planter</a></li>
 
                         </ul>
                     </li>
                     <hr class="mt-4">
                     <li class="nav-item btn btn-dark btn-block mt-2">
                         <div class="d-grid">
-                            <a role="button" class="btn btn-dark btn-block" href="../ProgStud/Pages/Kontakt.html">
+                            <a role="button" class="btn btn-dark btn-block" href="/ProgStud/Pages/Kontakt.html">
                                 Kontakt
                             </a>
                         </div>
