--- a/Pages/Planter.html
+++ b/Pages/Planter.html
@@ -45,7 +45,7 @@
                     <li class="nav-item dropdown btn btn-dark mt-2">
                         <a class="nav-link text-white dropdown-toggle" data-bs-toggle="dropdown" href="#">Portfolio</a>
                         <ul type="button" class="dropdown-menu">
-                            <li><a class="dropdown-item text-center" href="../ProgStud/Pages/Gallerier.html">Gallerier</a></li>
+                            <li><a class="dropdown-item text-center" href="/ProgStud/Pages/Gallerier.html">Gallerier</a></li>
                             <li><a class="dropdown-item text-center" href="/ProgStud/Pages/ASCII ART.html">ASCII Art</a></li>
                             <li><a class="dropdown-item text-center" href="/ProgStud/Pages/Planter.html">Planter</a></li>
                         </ul>
