--- a/Pages/Planter.html
+++ b/Pages/Planter.html
@@ -86,17 +86,20 @@
                     <div class="card">
                         <img src="../Pictures/Planter/Basilikum.jpg" class=" img-fluid" alt="Hvidløg">
                         <h5 class="card-title">Oregano</h5>
-                        <p class="card-text lh-sm">21. april 2022</p>
+                        <p class="card-text">21. april 2022</p>
+                        <p></p>
                     </div>
                     <div class="card">
                         <img src="../Pictures/Planter/Basilikum2.jpg" class=" img-fluid" alt="Vokset lidt">
                         <h5 class="card-title">Oregano</h5>
-                        <p class="card-text lh-sm">17. maj 2022</p>
+                        <p class="card-text">17. maj 2022</p>
+                        <p></p>
                     </div>
                     <div class="card">
                         <img src="../Pictures/Planter/Basilikum3.jpg" class=" img-fluid" alt="Vokset lidt">
                         <h5 class="card-title">Oregano</h5>
-                        <p class="card-text lh-sm">16. juni 2022</p>
+                        <p class="card-text ">16. juni 2022</p>
+                        <p></p>
                     </div>
 
 
