--- a/Pages/Gallerier.html
+++ b/Pages/Gallerier.html
@@ -29,10 +29,10 @@
         <div class="row row-cols-3">
             <!--Navigation-->
             <div class="col-12 col-md-3 p-2 bg-secondary  ">
-                <a href="../index.html">
-                    <img src="../Pictures/NytMig.jpg" class="btn rounded-circle mx-auto d-block" alt="Mig"
-                        width="200" height="260">
-                    </a>
+                <a href="/ProgStud/index.html">
+                    <img src="/ProgStud/index.html" class="btn rounded-circle mx-auto d-block" alt="Mig" width="200"
+                        height="260">
+                </a>
                 <ul class="nav nav-pills flex-column">
                     <li class="nav-item btn btn-dark btn-block mt-2">
                         <div class="d-grid">
@@ -45,9 +45,12 @@
                     <li class="nav-item dropdown btn btn-dark mt-2">
                         <a class="nav-link text-white dropdown-toggle" data-bs-toggle="dropdown" href="#">Portfolio</a>
                         <ul type="button" class="dropdown-menu">
-                            <li><a class="dropdown-item text-center" href="/ProgStud/Pages/Gallerier.html">Gallerier</a></li>
-                            <li><a class="dropdown-item text-center" href="/ProgStud/Pages/ASCII ART.html">ASCII Art</a></li>
-                            <li><a class="dropdown-item text-center" href="/ProgStud/Pages/Planter.html">Planter</a></li>
+                            <li><a class="dropdown-item text-center" href="/ProgStud/Pages/Gallerier.html">Gallerier</a>
+                            </li>
+                            <li><a class="dropdown-item text-center" href="/ProgStud/Pages/ASCII ART.html">ASCII Art</a>
+                            </li>
+                            <li><a class="dropdown-item text-center" href="/ProgStud/Pages/Planter.html">Planter</a>
+                            </li>
 
                         </ul>
                     </li>
@@ -71,20 +74,32 @@
                 </h3>
                 <div class="row row-cols-2 g-2">
                     <div class="col">
-                        <img src="../Pictures/Planter/Oregano.jpg " class="img-thumbnail"
-                            alt="Oregano skulle gerne være græsk" width="100" height="100">
-                        <img src="../Pictures/Planter/Oregano2.jpg " class="img-thumbnail img-fluid" alt="Vokset lidt"
-                            width="100" height="100">
+                        <a href="../Pictures/Planter/Oregano.jpg ">
+                            <img src="../Pictures/Planter/Oregano.jpg " class="img-thumbnail"
+                                alt="Oregano skulle gerne være græsk" width="100" height="100">
+                        </a>
+                        <a href="../Pictures/Planter/Oregano2.jpg ">
+                            <img src="../Pictures/Planter/Oregano2.jpg " class="img-thumbnail img-fluid"
+                                alt="Vokset lidt" width="100" height="100">
+                        </a>
+                        <a href="../Pictures/Planter/Oregano3.jpg ">
+                            <img src="../Pictures/Planter/Oregano3.jpg " class="img-thumbnail img-fluid"
+                                alt="Vokset lidt" width="100" height="100">
+                        </a>
                     </div>
                     <div class="col">
-                        <img src="../Pictures/Planter/Hvidløg.jpg" class="img-thumbnail img-fluid" alt="Hvidløg"
-                            width="100" height="100">
-                    </div>
-                    <div class="col">
-                        <img src="../Pictures/Planter/Basilikum.jpg" class="img-thumbnail img-fluid" alt="Hvidløg"
-                            width="100" height="100">
-                        <img src="../Pictures/Planter/Basilikum2.jpg" class="img-thumbnail img-fluid" alt="Vokset lidt"
-                            width="100" height="100">
+                        <a href="../Pictures/Planter/Basilikum.jpg">
+                            <img src="../Pictures/Planter/Basilikum.jpg" class="img-thumbnail img-fluid" alt="Hvidløg"
+                                width="100" height="100">
+                        </a>
+                        <a href="../Pictures/Planter/Basilikum2.jpg">
+                            <img src="../Pictures/Planter/Basilikum2.jpg" class="img-thumbnail img-fluid"
+                                alt="Vokset lidt" width="100" height="100">
+                        </a>
+                        <a href="../Pictures/Planter/Basilikum3.jpg">
+                            <img src="../Pictures/Planter/Basilikum3.jpg" class="img-thumbnail img-fluid"
+                                alt="Vokset lidt" width="100" height="100">
+                        </a>
                     </div>
                 </div>
 
@@ -98,48 +113,90 @@
                 </h3>
                 <div class="col bg-dark">
                     <div class="row row-cols-6 g-1">
-                        <img src="../Pictures/ASCII ART/LeftsideBKLS.png " class="img-thumbnail img-fluid"
-                            alt="Bricks with \" width="100" height="100">
-                        <img src="../Pictures/ASCII ART/RightsideBKLS.png" class="img-thumbnail img-fluid"
-                            alt="Bricks with /" width="100" height="100">
-                        <img src="../Pictures/ASCII ART/BricksStraight.png" class="img-thumbnail img-fluid"
-                            alt="Bricks with |" width="100" height="100">
-                        <img src="../Pictures/ASCII ART/WallTippingRight.png" class="img-thumbnail img-fluid"
-                            alt="Wall tipping right" width="100" height="100">
-                        <img src="../Pictures/ASCII ART/WallTippingLeft.png" class="img-thumbnail img-fluid"
-                            alt="Wall tipping Left" width="100" height="100">
-                        <img src="../Pictures/ASCII ART/Wall.png" class="img-thumbnail img-fluid" alt="Wall" width="100"
-                            height="100">
-                        <img src="../Pictures/ASCII ART/LongRoad.png" class="img-thumbnail img-fluid" alt="Long road"
-                            width="100" height="100">
-                        <img src="../Pictures/ASCII ART/Pyramid.png" class="img-thumbnail img-fluid" alt="Pyramid"
-                            width="100" height="100">
-                        <img src="../Pictures/ASCII ART/Pyramid2.png" class="img-thumbnail img-fluid" alt="Pyramid nr 2"
-                            width="100" height="100">
-                        <img src="../Pictures/ASCII ART/Tempel.png" class="img-thumbnail img-fluid" alt="Tempel"
-                            width="100" height="100">
-                        <img src="../Pictures/ASCII ART/CrossRoadDungeon.png" class="img-thumbnail img-fluid"
-                            alt="Dungeon Crossroad" width="100" height="100">
-                        <img src="../Pictures/ASCII ART/DoorExitDungeon.png" class="img-thumbnail img-fluid"
-                            alt="Dungeon Exit" width="100" height="100">
-                        <img src="../Pictures/ASCII ART/DoorUnknownDungeon.png" class="img-thumbnail img-fluid"
-                            alt="Whats behind that door?" width="100" height="100">
-                        <img src="../Pictures/ASCII ART/SunnyCow.png" class="img-thumbnail img-fluid"
-                            alt="Cow in the sun" width="100" height="100">
-                        <img src="../Pictures/ASCII ART/FireElement.png" class="img-thumbnail img-fluid"
-                            alt="Fire elemenatal" width="100" height="100">
-                        <img src="../Pictures/ASCII ART/GoatieMan.png" class="img-thumbnail img-fluid"
-                            alt="Man With a goatie" width="100" height="100">
-                        <img src="../Pictures/ASCII ART/WallOfTheGiant.png" class="img-thumbnail img-fluid"
-                            alt="Wall of the giant" width="100" height="100">
-                        <img src="../Pictures/ASCII ART/Cup-Entrance.png" class="img-thumbnail img-fluid"
-                            alt="Cup or a entrance" width="100" height="100">
-                        <img src="../Pictures/ASCII ART/WallPainting.png" class="img-thumbnail img-fluid"
-                            alt="Old painting on the wall" width="100" height="100">
-                        <img src="../Pictures/ASCII ART/RiverArea.png" class="img-thumbnail img-fluid"
-                            alt="Finally we found water" width="100" height="100">
-                        <img src="../Pictures/ASCII ART/Sun.png" class="img-thumbnail img-fluid"
-                            alt="Dont look at it too much" width="100" height="100">
+                        <a href="../Pictures/ASCII ART/LeftsideBKLS.png">
+                            <img src="../Pictures/ASCII ART/LeftsideBKLS.png " class="img-thumbnail img-fluid"
+                                alt="Bricks with \" width="100" height="100">
+                        </a>
+                        <a href="../Pictures/ASCII ART/RightsideBKLS.png">
+                            <img src="../Pictures/ASCII ART/RightsideBKLS.png" class="img-thumbnail img-fluid"
+                                alt="Bricks with /" width="100" height="100">
+                        </a>
+                        <a href="../Pictures/ASCII ART/BricksStraight.png">
+                            <img src="../Pictures/ASCII ART/BricksStraight.png" class="img-thumbnail img-fluid"
+                                alt="Bricks with |" width="100" height="100">
+                        </a>
+                        <a href="../Pictures/ASCII ART/WallTippingRight.png">
+                            <img src="../Pictures/ASCII ART/WallTippingRight.png" class="img-thumbnail img-fluid"
+                                alt="Wall tipping right" width="100" height="100">
+                        </a>
+                        <a href="../Pictures/ASCII ART/WallTippingLeft.png">
+                            <img src="../Pictures/ASCII ART/WallTippingLeft.png" class="img-thumbnail img-fluid"
+                                alt="Wall tipping Left" width="100" height="100">
+                        </a>
+                        <a href="../Pictures/ASCII ART/Wall.png">
+                            <img src="../Pictures/ASCII ART/Wall.png" class="img-thumbnail img-fluid" alt="Wall"
+                                width="100" height="100">
+                        </a>
+                        <a href="../Pictures/ASCII ART/LongRoad.png">
+                            <img src="../Pictures/ASCII ART/LongRoad.png" class="img-thumbnail img-fluid"
+                                alt="Long road" width="100" height="100">
+                        </a>
+                        <a href="../Pictures/ASCII ART/Pyramid.png">
+                            <img src="../Pictures/ASCII ART/Pyramid.png" class="img-thumbnail img-fluid" alt="Pyramid"
+                                width="100" height="100">
+                        </a>
+                        <a href="../Pictures/ASCII ART/Pyramid2.png">
+                            <img src="../Pictures/ASCII ART/Pyramid2.png" class="img-thumbnail img-fluid"
+                                alt="Pyramid nr 2" width="100" height="100">
+                        </a>
+                        <a href="../Pictures/ASCII ART/Tempel.png">
+                            <img src="../Pictures/ASCII ART/Tempel.png" class="img-thumbnail img-fluid" alt="Tempel"
+                                width="100" height="100">
+                        </a>
+                        <a href="../Pictures/ASCII ART/CrossRoadDungeon.png">
+                            <img src="../Pictures/ASCII ART/CrossRoadDungeon.png" class="img-thumbnail img-fluid"
+                                alt="Dungeon Crossroad" width="100" height="100">
+                        </a>
+                        <a href="../Pictures/ASCII ART/DoorExitDungeon.png">
+                            <img src="../Pictures/ASCII ART/DoorExitDungeon.png" class="img-thumbnail img-fluid"
+                                alt="Dungeon Exit" width="100" height="100">
+                        </a>
+                        <a href="../Pictures/ASCII ART/DoorUnknownDungeon.png">
+                            <img src="../Pictures/ASCII ART/DoorUnknownDungeon.png" class="img-thumbnail img-fluid"
+                                alt="Whats behind that door?" width="100" height="100">
+                        </a>
+                        <a href="../Pictures/ASCII ART/SunnyCow.png">
+                            <img src="../Pictures/ASCII ART/SunnyCow.png" class="img-thumbnail img-fluid"
+                                alt="Cow in the sun" width="100" height="100">
+                        </a>
+                        <a href="../Pictures/ASCII ART/FireElement.png">
+                            <img src="../Pictures/ASCII ART/FireElement.png" class="img-thumbnail img-fluid"
+                                alt="Fire elemenatal" width="100" height="100">
+                        </a>
+                        <a href="../Pictures/ASCII ART/GoatieMan.png">
+                            <img src="../Pictures/ASCII ART/GoatieMan.png" class="img-thumbnail img-fluid"
+                                alt="Man With a goatie" width="100" height="100">
+                        </a>
+                        <a href="../Pictures/ASCII ART/WallOfTheGiant.png">
+                            <img src="../Pictures/ASCII ART/WallOfTheGiant.png" class="img-thumbnail img-fluid"
+                                alt="Wall of the giant" width="100" height="100">
+                        </a>
+                        <a href="../Pictures/ASCII ART/Cup-Entrance.png">
+                            <img src="../Pictures/ASCII ART/Cup-Entrance.png" class="img-thumbnail img-fluid"
+                                alt="Cup or a entrance" width="100" height="100">
+                        </a>
+                        <a href="../Pictures/ASCII ART/WallPainting.png">
+                            <img src="../Pictures/ASCII ART/WallPainting.png" class="img-thumbnail img-fluid"
+                                alt="Old painting on the wall" width="100" height="100">
+                        </a>
+                        <a href="../Pictures/ASCII ART/RiverArea.png">
+                            <img src="../Pictures/ASCII ART/RiverArea.png" class="img-thumbnail img-fluid"
+                                alt="Finally we found water" width="100" height="100">
+                        </a>
+                        <a href="../Pictures/ASCII ART/Sun.png">
+                            <img src="../Pictures/ASCII ART/Sun.png" class="img-thumbnail img-fluid"
+                                alt="Dont look at it too much" width="100" height="100">
+                        </a>
                     </div>
                 </div>
             </div>
