--- a/Pages/Planter.html
+++ b/Pages/Planter.html
@@ -3,12 +3,12 @@
 
 <head>
     <title>Planter/title>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
-    <style>
-    </style>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+        <style>
+        </style>
 </head>
 
 <body>
@@ -30,8 +30,8 @@
             <!--Navigation-->
             <div class="col-12 col-md-3 p-2 bg-secondary  ">
                 <a href="/ProgStud/index.html">
-                    <img src="/ProgStud/Pictures/NytMig.jpg" class="btn rounded-circle mx-auto d-block" alt="Mig" width="200"
-                        height="260">
+                    <img src="../Pictures/NytMig.jpg" class="btn rounded-circle mx-auto d-block" alt="Mig"
+                        width="200" height="260">
                 </a>
                 <ul class="nav nav-pills flex-column">
                     <li class="nav-item btn btn-dark btn-block mt-2">
@@ -45,9 +45,12 @@
                     <li class="nav-item dropdown btn btn-dark mt-2">
                         <a class="nav-link text-white dropdown-toggle" data-bs-toggle="dropdown" href="#">Portfolio</a>
                         <ul type="button" class="dropdown-menu">
-                            <li><a class="dropdown-item text-center" href="/ProgStud/Pages/Gallerier.html">Gallerier</a></li>
-                            <li><a class="dropdown-item text-center" href="/ProgStud/Pages/ASCII ART.html">ASCII Art</a></li>
-                            <li><a class="dropdown-item text-center" href="/ProgStud/Pages/Planter.html">Planter</a></li>
+                            <li><a class="dropdown-item text-center" href="/ProgStud/Pages/Gallerier.html">Gallerier</a>
+                            </li>
+                            <li><a class="dropdown-item text-center" href="/ProgStud/Pages/ASCII ART.html">ASCII Art</a>
+                            </li>
+                            <li><a class="dropdown-item text-center" href="/ProgStud/Pages/Planter.html">Planter</a>
+                            </li>
                         </ul>
                     </li>
                     <hr class="mt-4">
@@ -65,45 +68,53 @@
             <div class="col bg-dark">
                 <div class="row row-cols-3">
                     <div class="card">
-                        <img src="../Pictures/Planter/Oregano.jpg " class=" img-fluid"
-                            alt="Oregano græsk">
+                        <a href="../Pictures/Planter/Oregano.jpg">
+                            <img src="../Pictures/Planter/Oregano.jpg" class=" img-fluid" alt="Oregano græsk">
+                        </a>
                         <h5 class="card-title">Oregano</h5>
                         <p class="card-text lh-sm">21. april 2022</p>
                         <p>Græsk oregano</p>
                     </div>
                     <div class="card">
-                        <img src="../Pictures/Planter/Oregano2.jpg " class=" img-fluid" alt="Vokset lidt">
+                        <a href="../Pictures/Planter/Oregano2.jpg">
+                            <img src="../Pictures/Planter/Oregano2.jpg " class=" img-fluid" alt="Vokset lidt">
+                        </a>
                         <h5 class="card-title">Oregano</h5>
                         <p class="card-text lh-sm">17. maj 2022</p>
                         <p>Græsk oregano</p>
                     </div>
                     <div class="card">
-                        <img src="../Pictures/Planter/Oregano3.jpg " class=" img-fluid" alt="Vokset lidt">
+                        <a href="../Pictures/Planter/Oregano3.jpg">
+                            <img src="../Pictures/Planter/Oregano3.jpg " class=" img-fluid" alt="Vokset lidt">
+                        </a>
                         <h5 class="card-title">Oregano</h5>
                         <p class="card-text lh-sm">16. juni 2022</p>
                         <p>Græsk oregano</p>
                     </div>
                     <div class="card">
-                        <img src="../Pictures/Planter/Basilikum.jpg" class=" img-fluid" alt="Hvidløg">
+                        <a href="../Pictures/Planter/Basilikum.jpg">
+                            <img src="../Pictures/Planter/Basilikum.jpg" class=" img-fluid" alt="Hvidløg">
+                        </a>
                         <h5 class="card-title">Oregano</h5>
                         <p class="card-text">21. april 2022</p>
                         <p></p>
                     </div>
                     <div class="card">
-                        <img src="../Pictures/Planter/Basilikum2.jpg" class=" img-fluid" alt="Vokset lidt">
+                        <a href="../Pictures/Planter/Basilikum2.jpg">
+                            <img src="../Pictures/Planter/Basilikum2.jpg" class=" img-fluid" alt="Vokset lidt">
+                        </a>
                         <h5 class="card-title">Oregano</h5>
                         <p class="card-text">17. maj 2022</p>
                         <p></p>
                     </div>
                     <div class="card">
-                        <img src="../Pictures/Planter/Basilikum3.jpg" class=" img-fluid" alt="Vokset lidt">
+                        <a href="../Pictures/Planter/Basilikum3.jpg">
+                            <img src="../Pictures/Planter/Basilikum3.jpg" class=" img-fluid" alt="Vokset lidt">
+                        </a>
                         <h5 class="card-title">Oregano</h5>
                         <p class="card-text ">16. juni 2022</p>
                         <p></p>
                     </div>
-
-
-
                 </div>
             </div>
         </div>
