--- a/Pages/Gallerier.html
+++ b/Pages/Gallerier.html
@@ -30,7 +30,7 @@
             <!--Navigation-->
             <div class="col-12 col-md-3 p-2 bg-secondary  ">
                 <a href="/ProgStud/index.html">
-                    <img src="/ProgStud/index.html" class="btn rounded-circle mx-auto d-block" alt="Mig" width="200"
+                    <img src="/ProgStud/Pictures/NytMig.jpg" class="btn rounded-circle mx-auto d-block" alt="Mig" width="200"
                         height="260">
                 </a>
                 <ul class="nav nav-pills flex-column">
