--- a/Pages/ASCII ART.html
+++ b/Pages/ASCII ART.html
@@ -65,7 +65,7 @@
 
             <!--Pictures of Ascii-->
             <div class="col bg-dark">
-                <div class="row row-cols-6">
+                <div class="row row-cols-lg-6">
                     <div class="card">
                         <a href="../Pictures/ASCII ART/RightsideBKLS.png">
                             <img src="../Pictures/ASCII ART/RightsideBKLS.png" class=" img-fluid" alt="Bricks with /">
